@@ -1,5 +1,12 @@
 2007-07-25  Denis Washington <denisw@svn.gnome.org>
 
+  * gnome-theme-info.h:
+  * gnome-theme-info.c: (gnome_theme_read_meta_theme):
+  * gnome-theme-apply.c: (gnome_meta_theme_set):
+  Add support for cursor theme names saved in metathemes.
+
+2007-07-25  Denis Washington <denisw@svn.gnome.org>
+
 	* gnome-theme-info.c: (add_common_icon_theme_dir_monitor),
 	(look_for_cursor_theme):
 	Fix abug introduced by the changes in revision 7856 which caused
